fix spacing at the bottom of project pages

--- a/www/V2html/proj/projStyles.css
+++ b/www/V2html/proj/projStyles.css
@@ -5,6 +5,7 @@
     margin-right: 10vw;
 
     margin-top: 70px;
+    margin-bottom: 50px;
 }
 
 .main_title {
